test/simple/correct/Reexport3.hs
module Reexport3 where

y :: Int
y = 43

