test/simple/typeerrors/Examples/BgExplicitTypedBinding.hs
module BgExplicitTypedBinding where

f :: Bool
f 1 = 1
